[package]
name = "parables-example"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"

[dependencies]
parables-testing = {git = "https://github.com/primablock/parables"}
failure = "0.1"

[build-dependencies]
parables-build = {git = "https://github.com/primablock/parables"}
