[package]
name = "parables-testing"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "GPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
ethereum-types = "0.3"
ethabi = { git = "https://github.com/primablock/ethabi.git", branch = "next" }
ethabi-derive = { git = "https://github.com/primablock/ethabi.git", branch = "next" }
ethash = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
ethcore = { git = "https://github.com/paritytech/parity.git", features = ["test-helpers"], rev = "ac3a706f" }
ethcore-bytes = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
ethcore-transaction = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
journaldb = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
kvdb = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
kvdb-memorydb = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
evm = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
vm = { git = "https://github.com/paritytech/parity.git", rev = "ac3a706f" }
proptest = { version = "0.8" }

failure = "0.1"

rayon = {version = "1.0", optional = true}

[dev-dependencies]
hex = "0.3"

[features]
default = ["test-runner"]
test-runner = ["rayon"]
