[package]
name = "parables-testing"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "GPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
ethereum-types = "0.3"
ethabi = { git = "https://github.com/primablock/ethabi.git", branch = "next" }
ethabi-derive = { git = "https://github.com/primablock/ethabi.git", branch = "next" }
ethash = { git = "https://github.com/paritytech/parity.git", rev = "796637b3" }
ethcore = { git = "https://github.com/paritytech/parity.git", rev = "796637b3", features = ["test-helpers"] }
ethcore-transaction = { git = "https://github.com/paritytech/parity.git", rev = "796637b3" }
evm = { git = "https://github.com/paritytech/parity.git", rev = "796637b3" }
journaldb = { git = "https://github.com/paritytech/parity.git", rev = "796637b3" }
kvdb = { git = "https://github.com/paritytech/parity-common.git", rev = "a72c34f8" }
kvdb-memorydb = { git = "https://github.com/paritytech/parity-common.git", rev = "a72c34f8" }
parity-bytes = { git = "https://github.com/paritytech/parity-common.git", rev = "a72c34f8" }
proptest = { version = "0.8" }
vm = { git = "https://github.com/paritytech/parity.git", rev = "796637b3" }

failure = "0.1"

rayon = {version = "1.0", optional = true}

[dev-dependencies]
hex = "0.3"

[features]
default = ["test-runner"]
test-runner = ["rayon"]
