[package]
name = "parables-testing"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "GPL-3.0"

[lib]
path = "lib.rs"

[dependencies]
parables-derive = {path = "../derive"}
parables-test-runner = {path = "../test-runner", optional = true}
ethereum-types = "0.3"
ethabi = { git = "https://github.com/primablock/ethabi.git", branch = "next" }
ethash = { git = "https://github.com/paritytech/parity.git" }
ethcore = { git = "https://github.com/paritytech/parity.git", features = ["test-helpers"] }
ethcore-transaction = { git = "https://github.com/paritytech/parity.git" }
evm = { git = "https://github.com/paritytech/parity.git" }
journaldb = { git = "https://github.com/paritytech/parity.git" }
kvdb = { git = "https://github.com/paritytech/parity-common.git" }
kvdb-memorydb = { git = "https://github.com/paritytech/parity-common.git" }
parity-bytes = { git = "https://github.com/paritytech/parity-common.git" }
vm = { git = "https://github.com/paritytech/parity.git" }

failure = "0.1"

eth-secp256k1 = {git = "https://github.com/paritytech/rust-secp256k1", optional = true}
rand = {version = "0.4", optional = true}
rust-crypto = {version = "0.2", optional = true}

[dev-dependencies]
hex = "0.3"

[features]
default = ["test-runner", "account"]
test-runner = ["parables-test-runner"]
account = ["eth-secp256k1", "rand", "rust-crypto"]
